--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,18 @@
   "name": "GestioneCollettaYeoman",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0-rc.3",
+    "angular": "~1.2.0",
     "json3": "~3.2.4",
     "es5-shim": "~2.0.8",
-    "angular-resource": "~1.2.0-rc.3",
-    "angular-route": "~1.2.0-rc.3",
-    "angular-cookies": "~1.2.0-rc.3",
-    "angular-sanitize": "~1.2.0-rc.3",
+    "angular-resource": "~1.2.0",
+    "angular-route": "~1.2.0",
+    "angular-cookies": "~1.2.0",
+    "angular-sanitize": "~1.2.0",
     "angular-bootstrap": "latest",
     "angular-ui-select2": "latest"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0-rc.3",
-    "angular-scenario": "~1.2.0-rc.3"
+    "angular-mocks": "~1.2.0",
+    "angular-scenario": "~1.2.0"
   }
 }
