--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "GestioneCollettaYeoman",
+  "name": "collettaApp",
   "version": "0.0.0",
   "dependencies": {
     "angular": "~1.2.0",
